fixed unnecessary spaces

--- a/bookmark-landing-page-master/bookmark.css
+++ b/bookmark-landing-page-master/bookmark.css
@@ -7,18 +7,27 @@
 body{
     font-family: 'Rubik', sans-serif;
     background-color: hsl(0, 0%, 98%);
+    align-items: center;
+    display: flex;
+    overflow-x: hidden;
+    flex-direction: column;
+}
+section{
     justify-content: center;
     align-items: center;
     display: flex;
     flex-direction: column;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    width: 100%;
+    padding: 0px 30px;
+    
 }
 /*Header*/
 header{
     display: flex;
-    gap: 200px;
-    padding-top: 30px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+    width: 100%;
 }
 .nav{
     display: none;
@@ -42,11 +51,69 @@ header button{
     border-radius: 5px;
 }
  /*Hero*/ 
- .about .hero-title{
+.hero{
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    text-align: center;
+    padding-top: 80px;
+    width: 100%;
+}
+.colour-div {
+    width: 100%;
+    height:200px;
+    background-color: hsl(231, 69%, 50%);
+    border: 2px solid hsl(231, 69%, 50%);
+    border-top-left-radius: 120px;
+    border-bottom-left-radius: 120px;
+    padding-left: 50px;
+}
+.colour-div img{
+    width: 350px;
+    height: auto;
+}
+.about .hero-title{
     font-weight: 700;
     text-transform: capitalize;
     font-size: 30px;
+    padding-top: 60px;
  }
+ .hero-text{
+    padding-top: 20px;
+ }
+ .hero-text br{
+    display: none;
+ }
+ .hero-text .break{
+    display: inline-block;
+ }
+ /*Hero buttons*/
+ 
+
+ .hero-buttons{
+    display:flex ;
+    justify-content: center;
+    gap: 20px;
+    padding-top: 30px;
+ }
+.about .chrome{
+    padding: 8px 7px;
+    font-size: 12px;
+    background-color: hsl(231, 69%, 50%);
+    color: white;
+    border: 2px solid hsl(231, 69%, 50%);
+    border-radius: 5px;
+}
+.about .fox{
+    padding: 8px 12px;
+    font-size: 12px;
+    background-color: white;
+    border: 2px solid white;
+    border-radius: 5px;
+}
+.features{
+    padding: 100px 30px 70px;
+}
 /*Footer*/
 footer{
     width: 100%;
@@ -129,6 +196,7 @@ nav a{
     header .nav{
         display: flex;
         gap: 20px;
+        visibility: visible;
     }
     header{
         display: flex;
@@ -138,6 +206,20 @@ nav a{
         margin-left: 30px;
     }
    
+    /*Hero*/
+    .hero{
+        flex-direction: row;
+    }
+    .about{
+        width: 100%;
+        text-align: left;
+    }
+    .hero-text .break{
+        display: none;
+    }
+    .hero-text br{
+    display: flex;
+ }
 
     .footer-nav{
         display: flex;
